--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="AfriLend - Empower African entrepreneurs with microloans" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-eval' 'unsafe-inline' https://js.stripe.com https://*.stripe.com https://*.stripe.network; object-src 'none'; base-uri 'self'; connect-src 'self' https://*.stripe.com https://api.stripe.com https://iqransnptrzuixvlhbvn.supabase.co;"
+      content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://*.stripe.com https://*.stripe.network https://checkout.stripe.com; object-src 'none'; base-uri 'self'; connect-src 'self' https://*.stripe.com https://api.stripe.com https://iqransnptrzuixvlhbvn.supabase.co;"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
