--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="AfriLend - Empower African entrepreneurs with microloans" />
+    <meta name="description" content="CandleLend - Empower African entrepreneurs with microloans" />
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://*.stripe.com https://*.stripe.network https://checkout.stripe.com; object-src 'none'; base-uri 'self'; connect-src 'self' https://*.stripe.com https://api.stripe.com https://iqransnptrzuixvlhbvn.supabase.co;"
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <title>AfriLend</title>
+    <title>CandleLend</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
